# assembly-cli

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  question_answer.rs  transcribe.rs
