[package]
name = "assembly-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "stream", "json"] }
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
structopt = "0.3.26"
dotenv = "0.15.0"
colored = "2.0.4"
anyhow = "1.0.75"

[profile.release]
debug = true
