[package]
name = "assembly-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["blocking", "stream", "json"] }
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
dotenv = "0.15.0"
colored = "2.0.4"
anyhow = "1.0.75"
clap = { version = "4.4.9", features = ["derive"] }

[profile.release]
debug = true
